--- a/INDEX.html
+++ b/INDEX.html
@@ -24,7 +24,7 @@
 	</nav>
 	<!-- end nav -->
 <main class="main__index">
-	<img class="index" src="img/header1.jpg" alt="sushi" >
+	
 </main>
 <!-- end main -->
 
@@ -38,7 +38,7 @@
 		<p>Telefono: +54 1136962316</p>
 	</div>
 	<div class="emails">
-		<p>ESCRIBINOS</p><br>
+		<p id="escribinos">ESCRIBINOS</p>
 		<p>contacto.sushilin@gmail.com</p>
 		<p>contacto.sushilin2@gmail.com</p>
 	</div>
