agregando bootstrap a Index y Promociones

--- a/index.html
+++ b/index.html
@@ -5,40 +5,82 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sushi Lin - Home</title>
 	<link rel="shortcut icon" href="img/favicon.png">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body id="index">
-	<nav>
-		<div class="navegador1">
-		<a class="navegador__imagen" href="index.html">
-			<img id="logo" src="img/favicon.png" alt="Logo sushi lin shushilin"></a>
-		<h1 class="navegador__texto">Sushi Lin</h1>
-		</div>
-		<ul class="navegador2">
-			<li><a href="views/menu.html"> Menu</a></li>
-			<li><a href="views/promociones.html">Promociones</a></li>
-			<li><a href="views/locales.html">Locales</a></li>
-			<li><a href="views/eventos.html">Eventos y Catering</a></li>
-		</ul>
-	</nav>
-	<!-- end nav -->
+<!-- inicio NAV -->
+	<nav class="navbar navbar-expand-lg navbar navbar-dark bg-nav sticky-top">
+  		<div class="container-fluid">
+   	 		<a class="navbar-brand d-flex align-items-end" href="index.html"> <img src="img/logo.png" class="rounded-pill" id="logo" alt="Logo sushi lin shushilin">
+		 	</a>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      		<span class="navbar-toggler-icon"></span>
+    		</button>
+    	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+     		<ul class="navbar-nav ms-auto mt-0 mt-lg-4">
+        		<li class="nav-item mx-4">
+         		 <a class="nav-link active" aria-current="page" href="views/menu.html">Menu</a>
+        		</li>
+        		<li class="nav-item  mx-4">
+         		 <a class="nav-link active" href="views/promociones.html">Promociones</a>
+        		</li>
+        		</li>
+        		<li class="nav-item  mx-4">
+         		 <a class="nav-link active" href="views/locales.html">Locales</a>
+        		</li>
+        		</li>
+        		<li class="nav-item mx-4">
+         		 <a class="nav-link active" href="views/eventos.html">Eventos y Catering</a>
+        		</li>
+        	</ul>
+        </div>
+  </div>
+</nav>
+<!-- end nav -->
+<!-- INICIA CAROUSEL -->
 <main class="main__index">
-	
+	<div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
+	  <div class="carousel-indicators">
+	    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+	    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+	    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+	  </div>
+	  <div class="carousel-inner">
+	    <div class="carousel-item active" data-bs-interval="10000">
+	      <img src="img/header1.jpg" class="d-block w-100" id="carousel" alt="sushi lin carousel">
+	    </div>
+	    <div class="carousel-item" data-bs-interval="2000">
+	      <img src="img/header2.jpg" class="d-block w-100"id="carousel" alt="sushi lin carousel">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="img/header3.jpg" class="d-block w-100"id="carousel" alt="sushi lin carousel">
+	    </div>
+	  </div>
+	  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Next</span>
+	  </button>
+	</div>
 </main>
-<!-- end main -->
+<!-- END CAROUSEL -->
 
 <footer>
 	<div class="direcciones">
 		<p>Los Cardales</p>
 		<p>Rivadavia 40, Los Cardales, Buenos Aires.</p>
-		<p>Telefono: +54 1124675151</p><br>
+		<p>Telefono: +54 1124675151</p>
 		<p>Benavidez</p>
 		<p>Presidente Perón 6408, Benavidez, Buenos Aires.</p>
 		<p>Telefono: +54 1136962316</p>
 	</div>
 	<div class="emails">
-		<p>ESCRIBINOS</p><br>
+		<p>ESCRIBINOS</p>
 		<p>contacto.sushilin@gmail.com</p>
 		<p>contacto.sushilin2@gmail.com</p>
 	</div>
@@ -50,6 +92,8 @@
 	<a href="https://www.instagram.com/lin.sushi/" target="_blank"><img class="boton"src="img/ig.png" alt="instagram ig sushi lin" width="60"height="60"></a>
 	</div>
 </footer>
+
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
